syntax = "proto3";

package alerting.common;

option go_package = "github.com/afikmenashe/alerting-platform/pkg/proto/common";

// Severity levels for alerts
// Values match database enum (LOW, MEDIUM, HIGH, CRITICAL)
enum Severity {
  UNSPECIFIED = 0;
  LOW = 1;
  MEDIUM = 2;
  HIGH = 3;
  CRITICAL = 4;
}

// Rule change actions
enum RuleAction {
  RULE_ACTION_UNSPECIFIED = 0;
  RULE_ACTION_CREATED = 1;
  RULE_ACTION_UPDATED = 2;
  RULE_ACTION_DELETED = 3;
  RULE_ACTION_DISABLED = 4;
}
